--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.32.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-xgboost==2.0.3
-joblib==1.3.2
-altair==4.2.2
+streamlit
+pandas
+numpy
+scikit-learn
+xgboost
+joblib
